--- a/Statistical Thinking/Untitled.ipynb
+++ b/Statistical Thinking/Untitled.ipynb
@@ -318,7 +318,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 11. Create a bar graph to show the different average salaries of men and women. (Bonus: Add error bars to the bars showing the 95% confidence interval). What does the graph tell you about the difference between men and women’s salaries?\n"
+    "# 11. Create a bar graph to show the different average salaries of men and women. (Bonus: Add error bars to the bars showing the 95% confidence interval). What does the graph tell you about the difference between men and women’s salaries?\n",
+    "On average men are more likely to get paid more that women"
    ]
   },
   {
@@ -386,7 +387,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 13. Using the pearsonr function from the scipy.stats package, calculate the Pearson correlation coefficient (and its corresponding p value) to determine the nature of the relationship between Years Worked and Salary. See help(pearsonr) for help on this function."
+    "# 13. Using the pearsonr function from the scipy.stats package, calculate the Pearson correlation coefficient (and its corresponding p value) to determine the nature of the relationship between Years Worked and Salary. See help(pearsonr) for help on this function.\n",
+    "There is a moderate correlation between years worked and salary."
    ]
   },
   {
